--- a/tomorrow-house/styles/main.scss
+++ b/tomorrow-house/styles/main.scss
@@ -1,2 +1,6 @@
+@import './constants/colors';
+@import './constants/typography';
+
 @import './base/font';
 @import './base/normalize';
+@import './base/reset';
