--- a/tomorrow-house/style.css
+++ b/tomorrow-house/style.css
@@ -371,4 +371,48 @@ template {
 [hidden] {
   display: none; }
 
+* {
+  margin: 0;
+  font-family: "Noto Sans KR", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box; }
+
+html {
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 16px; }
+
+body {
+  font-family: "Noto Sans KR", sans-serif;
+  color: #3f4150; }
+
+h1 {
+  margin: 0; }
+
+a {
+  color: inherit;
+  text-decoration: none; }
+
+button,
+input,
+select,
+textarea {
+  background-color: transparent;
+  border: 0; }
+  button:focus,
+  input:focus,
+  select:focus,
+  textarea:focus {
+    outline: none;
+    box-shadow: none; }
+
+a,
+button {
+  cursor: pointer; }
+
+ul,
+ol {
+  list-style: none;
+  padding-left: 0; }
+
 /*# sourceMappingURL=style.css.map */
