--- a/tomorrow-house/styles/base/_reset.scss
+++ b/tomorrow-house/styles/base/_reset.scss
@@ -25,5 +25,26 @@ a {
   text-decoration: none;
 }
 
+button,
+input,
+select,
+textarea {
+  background-color: transparent;
+  border: 0;
+
+  &:focus {
+    outline: none;
+    box-shadow: none;
+  }
+}
+
+a,
 button {
+  cursor: pointer;
+}
+
+ul,
+ol {
+  list-style: none;
+  padding-left: 0;
 }
