--- a/tomorrow-house/styles/layouts/_grids.scss
+++ b/tomorrow-house/styles/layouts/_grids.scss
@@ -29,12 +29,10 @@ $gutter: 20px;
 $sm-columns: 4;
 $sm-margin: 5px;
 
-$md-breakpoint: 768px;
 $md-columns: 12;
 $md-margin: 30px;
 $md-max-container: 960px + $md-margin * 2; //960px에서 마진값이 빠져 900px이 되기때문에 빠진값을 더해줌
 
-$lg-breakpoint: 1200px;
 $lg-columns: 12;
 $lg-unit: 75px;
 $lg-max-container: ($lg-unit + $gutter) * $lg-columns;
@@ -61,7 +59,7 @@ $lg-max-container: ($lg-unit + $gutter) * $lg-columns;
     }
   }
 
-  @media screen and (min-width: $md-breakpoint) {
+  @include responsive('T') {
     max-width: $md-max-container;
     padding: 0 $md-margin;
 
@@ -73,7 +71,7 @@ $lg-max-container: ($lg-unit + $gutter) * $lg-columns;
       }
     }
   }
-  @media screen and (min-width: $lg-breakpoint) {
+  @include responsive('D') {
     max-width: $lg-max-container;
     padding: 0;
 
