--- a/tomorrow-house/styles/main.scss
+++ b/tomorrow-house/styles/main.scss
@@ -6,6 +6,7 @@
 @import './base/normalize';
 @import './base/reset';
 
+@import './mixins/positions';
 @import './mixins/text-style';
 @import './mixins/responsive';
 
