--- a/tomorrow-house/styles/main.scss
+++ b/tomorrow-house/styles/main.scss
@@ -6,8 +6,9 @@
 @import './base/normalize';
 @import './base/reset';
 
-@import './mixins/positions';
 @import './mixins/text-style';
 @import './mixins/responsive';
+@import './mixins/positions';
+@import './mixins/flexbox';
 
 @import './layouts/grids';
