Implement button component

--- a/tomorrow-house/styles/main.scss
+++ b/tomorrow-house/styles/main.scss
@@ -15,5 +15,6 @@
 @import './modules/avatar';
 @import './modules/star-ratings';
 @import './modules/prices';
+@import './modules/buttons';
 
 @import './layouts/grids';
