--- a/tomorrow-house/styles/main.scss
+++ b/tomorrow-house/styles/main.scss
@@ -5,6 +5,7 @@
 @import './base/font';
 @import './base/normalize';
 @import './base/reset';
+@import './base/globals';
 
 @import './mixins/text-style';
 @import './mixins/responsive';
