--- a/tomorrow-house/styles/components/_my-menu.scss
+++ b/tomorrow-house/styles/components/_my-menu.scss
@@ -1,9 +1,33 @@
 .my-menu {
+  $btn-size: 32px;
   $tooltip-size: 12px;
+
   position: relative;
+
+  &-btn {
+    width: $btn-size;
+    height: $btn-size;
+    overflow: hidden;
+    border: 3px solid $white;
+    border-radius: 50%;
+    transition: border-color 200ms ease-in-out;
+
+    &:hover,
+    &.is-active {
+      border-color: $blue;
+    }
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 
   &-content {
     @include pos-center-x;
+    top: $btn-size + $tooltip-size + 8px;
     border-radius: 4px;
     box-shadow: $dropdown-shadow;
 
