--- a/tomorrow-house/styles/components/_my-menu.scss
+++ b/tomorrow-house/styles/components/_my-menu.scss
@@ -8,6 +8,11 @@
     width: $btn-size;
     height: $btn-size;
     overflow: hidden;
+    // 이미지가 없을때 대응
+    background-image: url('./assets/images/img-user-default.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
     border: 3px solid $white;
     border-radius: 50%;
     transition: border-color 200ms ease-in-out;
