--- a/tomorrow-house/styles/modules/_avatar.scss
+++ b/tomorrow-house/styles/modules/_avatar.scss
@@ -2,6 +2,11 @@
   display: block;
   overflow: hidden;
   border-radius: 50%;
+  // 이미지가 없을때 대응
+  background-image: url('./assets/images/img-user-default.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 
   img {
     display: block;
