--- a/tomorrow-house/styles/layouts/_overlay.scss
+++ b/tomorrow-house/styles/layouts/_overlay.scss
@@ -6,4 +6,12 @@
   width: 100%;
   height: 100vh;
   background-color: rgba($primary, 0.5);
+  opacity: 0;
+  visibility: hidden; //active 상태가 아닐 때 뒷요소 클릭 가능하도록 함
+  transition: opacity 300ms ease-in-out, visibility 300ms ease-in-out;
+
+  &.is-active {
+    opacity: 1;
+    visibility: visible;
+  }
 }
