--- a/tomorrow-house/styles/layouts/_sidebar.scss
+++ b/tomorrow-house/styles/layouts/_sidebar.scss
@@ -1,4 +1,6 @@
 .sidebar {
+  $sidebar-width: 240px;
+
   position: fixed;
   top: 0;
   left: 0;
@@ -8,7 +10,17 @@
   overflow-y: auto;
   padding: 32px 20px;
   background-color: $white;
+  transform: translate3d(
+    -#{$sidebar-width},
+    0,
+    0
+  ); //사이드바를 숨길때 보통 사용
   overscroll-behavior: contain;
+  transition: transform 300ms ease-in-out;
+
+  &.is-active {
+    transform: translate3d(0, 0, 0);
+  }
 
   &-header {
     padding: 0 12px;
