--- a/tomorrow-house/styles/layouts/_search-modal.scss
+++ b/tomorrow-house/styles/layouts/_search-modal.scss
@@ -8,6 +8,10 @@
   z-index: $search-modal-level;
   padding: 12px 0;
 
+  &-header {
+    margin-bottom: 20px;
+  }
+
   &-form {
     @include flexbox(between);
 
