--- a/tomorrow-house/styles/components/_search-history.scss
+++ b/tomorrow-house/styles/components/_search-history.scss
@@ -23,12 +23,17 @@
   &-item {
     position: relative;
 
+    &:hover {
+      background-color: $background;
+    }
+
     .word-btn {
       @include text-style(16, $primary);
       width: 100%;
       font-weight: 400;
       text-align: left;
       padding: 10px $close-btn-size 10px 8px;
+      border-radius: 2px;
     }
 
     .delete-btn {
@@ -40,6 +45,10 @@
       height: $close-btn-size;
       font-size: 16px;
       color: $tertiary;
+
+      &:hover {
+        color: $primary;
+      }
     }
   }
 }
