--- a/tomorrow-house/styles/components/_my-menu.scss
+++ b/tomorrow-house/styles/components/_my-menu.scss
@@ -4,6 +4,17 @@
 
   position: relative;
 
+  &.is-active {
+    .my-menu-btn {
+      border-color: $blue;
+    }
+    .my-menu-content {
+      opacity: 1;
+      visibility: visible;
+      transform: translate3d(-50%, 0, 0); //position 선언 사수
+    }
+  }
+
   &-btn {
     width: $btn-size;
     height: $btn-size;
@@ -17,8 +28,7 @@
     border-radius: 50%;
     transition: border-color 200ms ease-in-out;
 
-    &:hover,
-    &.is-active {
+    &:hove {
       border-color: $blue;
     }
 
@@ -35,6 +45,11 @@
     top: $btn-size + $tooltip-size + 8px;
     border-radius: 4px;
     box-shadow: $dropdown-shadow;
+    visibility: hidden;
+    opacity: 0;
+    transform: translate3d(-50%, -10px, 0); //position 선언 사수
+    transition: transform 200ms ease-in-out, opacity 200ms ease-in-out,
+      visibility 200ms ease-in-out;
 
     &::before,
     &::after {
