--- a/tomorrow-house/styles/layouts/_gnb.scss
+++ b/tomorrow-house/styles/layouts/_gnb.scss
@@ -1,5 +1,6 @@
 .gnb {
   position: relative;
+  background-color: $white;
   border-bottom: 1px solid $border;
 
   &-wrapper {
@@ -32,6 +33,10 @@
   }
 
   @include responsive(T) {
+    &-wrapper {
+      height: 80px;
+    }
+
     &-left {
       @include flexbox(start);
     }
@@ -65,10 +70,6 @@
       }
     }
 
-    &-wrapper {
-      height: 80px;
-    }
-
     .logo {
       position: static;
       margin-right: 32px;
@@ -78,8 +79,10 @@
         height: 24px;
       }
     }
+
     .btn-primary {
       width: 88px;
+
       i {
         margin-left: 4px;
       }
@@ -87,10 +90,34 @@
   }
 
   @include responsive(D) {
-    &-right {
+    &-search {
+      position: relative;
+      width: 264px;
+      margin-right: 24px;
+
       .input-group {
-        width: 264px;
-        margin-right: 24px;
+        width: 100%;
+      }
+
+      .search-history {
+        position: absolute;
+        top: calc(100% + 8px);
+        left: 0;
+        display: none;
+        width: 100%;
+        padding: 16px 8px 8px;
+        background-color: $white;
+        border: 1px solid $border;
+        border-radius: 4px;
+        box-shadow: $dropdown-shadow;
+
+        &.is-active {
+          display: block;
+        }
+
+        &-header {
+          padding: 0 8px;
+        }
       }
     }
   }
