--- a/tomorrow-house/styles/components/_search-history.scss
+++ b/tomorrow-house/styles/components/_search-history.scss
@@ -13,11 +13,13 @@
   }
 
   &-content {
-    @include text-style(16, $tertiary);
-    font-weight: 400;
-    width: 100%;
-    height: 44px;
-    padding: 0 8px;
+    .placeholder {
+      @include text-style(16, $tertiary);
+      font-weight: 400;
+      width: 100%;
+      height: 44px;
+      padding: 0 8px;
+    }
   }
 
   &-item {
