--- a/tomorrow-house/styles/layouts/_sidebar.scss
+++ b/tomorrow-house/styles/layouts/_sidebar.scss
@@ -1,6 +1,7 @@
 .sidebar {
   $sidebar-width: 240px;
 
+  @include no-scrollbar;
   position: fixed;
   top: 0;
   left: 0;
@@ -107,9 +108,5 @@
         }
       }
     }
-  }
-
-  &::-webkit-scrollbar {
-    display: none;
   }
 }
