Replace literal values with global variables and set background to white

--- a/tomorrow-house/styles/layouts/_gnb.scss
+++ b/tomorrow-house/styles/layouts/_gnb.scss
@@ -5,7 +5,7 @@
 
   &-wrapper {
     @include flexbox(between);
-    height: 50px;
+    height: $gnb-height-sm - 1px;
   }
 
   &-right {
@@ -34,7 +34,7 @@
 
   @include responsive(T) {
     &-wrapper {
-      height: 80px;
+      height: $gnb-height-md - 1;
     }
 
     &-left {
