--- a/tomorrow-house/styles/components/_product-carousel.scss
+++ b/tomorrow-house/styles/components/_product-carousel.scss
@@ -46,4 +46,50 @@
     width: 100%;
     height: auto;
   }
+
+  @include responsive(T) {
+    padding-right: 30px;
+
+    &-slider {
+      margin: 0 0 8px 0;
+      border-radius: 4px; //모서리
+      overflow: hidden; //모서리
+    }
+
+    &-thumbnail {
+      position: static;
+      transform: none;
+    }
+
+    .thumbnail-item {
+      margin: 0 8px 0 0;
+
+      &.tns-nav-active {
+        button {
+          border: 2px solid $blue;
+          transform: none;
+        }
+      }
+    }
+
+    .thumbnail-list {
+      justify-content: flex-start;
+
+      button {
+        @include flexbox;
+        justify-content: center;
+        align-items: center;
+        width: 56px;
+        height: 56px;
+        border-radius: 4px;
+        overflow: hidden;
+        opacity: 1;
+      }
+
+      img {
+        display: block;
+        width: 56px;
+      }
+    }
+  }
 }
