--- a/tomorrow-house/styles/components/_product-section-header.scss
+++ b/tomorrow-house/styles/components/_product-section-header.scss
@@ -18,7 +18,7 @@
   .text-button,
   .icon-button {
     @include pos-center-y;
-    right: -15px;
+    right: -#{$grid-margin};
 
     &:active {
       opacity: 0.4;
@@ -33,7 +33,7 @@
 
   .icon-button {
     @include flexbox;
-    right: -15px;
+    right: -#{$grid-margin};
     width: 22px + (15px * 2);
     height: 22px + (15px * 2);
     font-size: 22px;
