--- a/tomorrow-house/styles/main.scss
+++ b/tomorrow-house/styles/main.scss
@@ -4,6 +4,7 @@
 @import './constants/box-shadow';
 @import './constants/z-indexes';
 @import './constants/dimensions';
+@import './constants/grids';
 
 @import './base/font';
 @import './base/normalize';
@@ -36,8 +37,10 @@
 @import './components/product-info';
 @import './components/order-form';
 @import './components/checkout-card';
+@import './components/product-section';
 @import './components/product-section-header';
 @import './components/product-table';
+@import './components/product-spec';
 
 @import './layouts/grids';
 @import './layouts/gnb';
