--- a/tomorrow-house/styles/components/_product-spec.scss
+++ b/tomorrow-house/styles/components/_product-spec.scss
@@ -1,5 +1,42 @@
 .product-spec {
+  height: 470px;
   padding-top: 20px 0;
+  overflow: hidden;
+  position: relative;
+
+  &.is-open {
+    height: auto;
+
+    .button-wrapper {
+      display: none;
+    }
+  }
+
+  .button-wrapper {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+    // 삐져나온 부분 안보이게 처리하기 위함
+    padding-bottom: 20px;
+    background-color: $white;
+
+    &::before {
+      position: absolute;
+      bottom: 20px + 55px;
+      left: 0;
+      width: 100%;
+      height: 64px;
+      content: '';
+      background-image: linear-gradient(to top, $white 0%, transparent 100%);
+      display: block;
+    }
+
+    button {
+      width: 100%;
+    }
+  }
 
   .product-table {
     margin-top: 20px;
