--- a/tomorrow-house/styles/components/_review-card.scss
+++ b/tomorrow-house/styles/components/_review-card.scss
@@ -42,6 +42,21 @@
   &-body {
     margin-bottom: 20px;
 
+    .review-image {
+      width: 64px;
+      height: 64px;
+      margin-bottom: 8px;
+      overflow: hidden;
+      border-radius: 4px;
+
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
     p {
       @include text-style(13, $primary);
       font-weight: 400;
@@ -54,6 +69,13 @@
     button {
       width: 120px;
       margin-right: 8px;
+
+      i {
+        margin-right: 4px;
+        margin-left: -4px;
+        font-size: 20px;
+        color: $white;
+      }
     }
 
     p {
@@ -84,6 +106,12 @@
     &-body {
       p {
         @include text-style(14);
+      }
+
+      .review-image {
+        width: 112px;
+        height: 112px;
+        margin-bottom: 16px;
       }
     }
   }
