--- a/tomorrow-house/styles/components/_score-stats.scss
+++ b/tomorrow-house/styles/components/_score-stats.scss
@@ -40,6 +40,8 @@
           height: 5px;
           border-radius: (5px / 2);
           background-color: $blue;
+          animation-duration: 1000ms;
+          animation-name: slide-active-bar;
         }
       }
 
@@ -60,6 +62,15 @@
           margin-right: 8px;
         }
       }
+    }
+  }
+
+  @keyframes slide-active-bar {
+    0% {
+      transform: translate3d(-100%, 0, 0);
+    }
+    100% {
+      transform: translate3d(0, 0, 0);
     }
   }
 }
