--- a/tomorrow-house/styles/components/_inquiry-card.scss
+++ b/tomorrow-house/styles/components/_inquiry-card.scss
@@ -53,7 +53,14 @@
     }
 
     p {
+      @include flexbox(start);
       color: $primary;
+
+      i {
+        margin-right: 8px;
+        color: $tertiary;
+        font-size: 16px;
+      }
     }
   }
 
