--- a/tomorrow-house/styles/mixins/_responsive.scss
+++ b/tomorrow-house/styles/mixins/_responsive.scss
@@ -17,3 +17,9 @@
 //     color: red;
 //   }
 // }
+
+@mixin mobile-only() {
+  @media screen and (max-width: $md-breakpoint - 1px) {
+    @content;
+  }
+}
