--- a/tomorrow-house/styles/components/_product-card.scss
+++ b/tomorrow-house/styles/components/_product-card.scss
@@ -1,13 +1,19 @@
 .product-card {
   &-image {
+    position: relative; //6. 비율을 유지해서 공간을 만든다.
+    width: 100%;
+    height: 0; //1. 비율을 유지해서 공간을 만든다.
+    padding-bottom: 100%; //2. 비율을 유지해서 공간을 만든다.
     overflow: hidden;
     border-radius: 4px;
     margin-bottom: 8px;
 
     img {
+      @include pos-center; //5. 비율을 유지해서 공간을 만든다.
       display: block;
       width: 100%;
-      height: auto;
+      height: 100%; //3. 비율을 유지해서 공간을 만든다.
+      object-fit: cover; //4. 비율을 유지해서 공간을 만든다.
       transition: transform 200ms ease-in-out;
     }
   }
