Create a new mixin: truncate

--- a/tomorrow-house/styles/layouts/_sidebar.scss
+++ b/tomorrow-house/styles/layouts/_sidebar.scss
@@ -64,11 +64,8 @@
     }
 
     .username {
-      //truncate
+      @include truncate;
       flex-grow: 1;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
     }
   }
 
