--- a/tomorrow-house/styles/components/_user-gallery.scss
+++ b/tomorrow-house/styles/components/_user-gallery.scss
@@ -1,13 +1,62 @@
 .user-gallery {
   margin: 0 -#{$grid-margin};
+  overflow: hidden;
 
   &-slider {
+    position: relative;
     margin-bottom: 4px;
+  }
+
+  &-controls {
+    @include pos-center;
+    @include flexbox(between);
+    width: 100%;
+    padding: 0 52px;
+
+    .control-button {
+      @include flexbox;
+
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      font-style: 28px;
+      color: $primary;
+      background-color: $white;
+      transition: background-color 100ms ease-in-out, color 100ms ease-in-out;
+
+      &.is-prev {
+        i {
+          margin-left: -2px;
+          transform: rotate(90deg);
+        }
+      }
+
+      &.is-next {
+        i {
+          margin-right: -2px;
+          transform: rotate(-90deg);
+        }
+      }
+
+      &:hover {
+        color: $white;
+        background-color: $blue;
+      }
+
+      &[disabled] {
+        visibility: hidden;
+      }
+    }
   }
 
   .thumbnail-list {
     @include flexbox(start);
     padding-left: 2px;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   .thumbnail-item {
@@ -33,8 +82,8 @@
 
       img {
         display: block;
-        width: 100%;
-        height: 100%;
+        width: 64px;
+        height: 64px;
         object-fit: cover;
       }
     }
@@ -57,6 +106,11 @@
       button {
         width: 75px;
         height: 75px;
+
+        img {
+          width: 75px;
+          height: 75px;
+        }
       }
     }
   }
