--- a/tomorrow-house/styles/layouts/_order-form-modal.scss
+++ b/tomorrow-house/styles/layouts/_order-form-modal.scss
@@ -5,6 +5,9 @@
   z-index: $order-form-modal-level;
   display: none;
   width: 100%;
+  max-height: 75vh;
+  overscroll-behavior: contain;
+  overflow-y: auto;
   background-color: $white;
   padding-top: 16px;
   border-radius: 12px 12px 0 0;
@@ -16,9 +19,12 @@
     animation-duration: 300ms;
   }
 
-  .order-checkouts,
-  .order-summary {
+  .order-checkouts {
     margin-bottom: 16px;
+  }
+
+  .order-summary {
+    margin-bottom: 48px + (4px * 2) + 16px;
   }
 
   .order-inputs {
@@ -26,8 +32,12 @@
   }
 
   .button-group {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     padding: 4px;
-    padding-top: 0;
+    background-color: $white;
   }
 
   @include responsive(T) {
