Set min/max-height and position of floating-order-form

--- a/tomorrow-house/styles/layouts/_floating-order-form.scss
+++ b/tomorrow-house/styles/layouts/_floating-order-form.scss
@@ -1,11 +1,17 @@
 .floating-order-form {
-  @include flexbox(start, start);
-  flex-direction: column;
+  $global-header-height: $gnb-height-md + $lnb-height-md +
+    $product-tab-height-md;
 
-  height: 700px; //Temp
+  @include flexbox(start, start);
+  position: sticky;
+  top: $global-header-height;
+  flex-direction: column;
+  min-height: calc(100vh - #{$global-header-height + $global-footer-height});
+  max-height: calc(100vh - #{$global-header-height});
+  padding: 24px 0;
 
   > * {
-    //모든 자식요소
+    //> * :모든 자식요소
     width: 100%;
   }
 
